--- a/core/test/router.spec.html
+++ b/core/test/router.spec.html
@@ -65,7 +65,7 @@
             return new Promise((resolve, reject) => {
               setTimeout(() => resolve(), 100);
             });
-          }
+          };
 
           let router;
           beforeEach(() => {
@@ -90,7 +90,7 @@
             });
           });
 
-          it('should throw if the router outlet is a not valid DOM Node (on finish)', async () => {
+          it('should throw if the router outlet is a not valid DOM Node (on finish)', async() => {
             await Promise.all([
               undefined,
               null,
@@ -98,7 +98,7 @@
               false,
               '',
               NaN
-            ].map(async (invalidOutlet) => {
+            ].map(async(invalidOutlet) => {
               const router = new Vaadin.Router(outlet);
               router.setRoutes([{path: '/', component: 'x-home-view'}]);
               const fulfilled = sinon.spy();
@@ -113,7 +113,7 @@
             }));
           });
 
-          it('should return a promise that resolves to the router outlet DOM element', async () => {
+          it('should return a promise that resolves to the router outlet DOM element', async() => {
             router.setRoutes([{path: '/', component: 'x-home-view'}]);
             const result = router.render('/');
             expect(result).to.be.a('promise');
@@ -121,7 +121,7 @@
             expect(actual).to.equal(outlet);
           });
 
-          it('should return a promise that resolves when the rendered content is appended to the DOM', async () => {
+          it('should return a promise that resolves when the rendered content is appended to the DOM', async() => {
             router.setRoutes([{path: '/', component: 'x-home-view'}]);
             const promise = router.render('/');
             expect(outlet.children).to.have.lengthOf(0);
@@ -139,14 +139,14 @@
               .catch(() => done());
           });
 
-          it('should create and append a route `component` into the router outlet', async () => {
+          it('should create and append a route `component` into the router outlet', async() => {
             router.setRoutes([{path: '/', component: 'x-home-view'}]);
             await router.render('/');
             expect(outlet.children).to.have.lengthOf(1);
             expect(outlet.children[0].tagName).to.match(/x-home-view/i);
           });
 
-          it('should replace any pre-existing content of the router outlet', async () => {
+          it('should replace any pre-existing content of the router outlet', async() => {
             router.setRoutes([
               {path: '/', component: 'x-home-view'},
               {path: '/users', component: 'x-users-view'},
@@ -165,7 +165,7 @@
             expect(outlet.children).to.have.lengthOf(0);
           });
 
-          it('should ignore a successful result of a resolve pass if a new resolve pass is started before the first is completed', async () => {
+          it('should ignore a successful result of a resolve pass if a new resolve pass is started before the first is completed', async() => {
             router.setRoutes([
               {path: '/', component: 'x-home-view'},
               {path: '/slow', action: add100msDelay, children: [
@@ -181,7 +181,7 @@
             expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
           });
 
-          it('should ignore an error result of a resolve pass if a new resolve pass is started before the first is completed', async () => {
+          it('should ignore an error result of a resolve pass if a new resolve pass is started before the first is completed', async() => {
             router.setRoutes([
               {path: '/', component: 'x-home-view'},
               {path: '/slow', action: add100msDelay, children: [
@@ -366,6 +366,74 @@
             await router.ready;
             expect(outlet.children).to.have.lengthOf(1);
             expect(outlet.children[0].tagName).to.match(/x-home-view/i);
+          });
+        });
+
+        describe('route parameters', () => {
+          let router;
+          beforeEach(() => {
+            router = new Vaadin.Router(outlet);
+          });
+
+          afterEach(() => {
+            router.unsubscribe();
+          });
+
+          it('should bind named parameters to `route.params` property using string keys', async() => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/:user', component: 'x-user-profile'}
+            ]);
+            router.render('/foo');
+            await router.ready.then((outlet) => {
+              const elem = outlet.children[0];
+              expect(elem.route).to.be.object;
+              expect(elem.route.params).to.be.object;
+              expect(elem.route.params.user).to.equal('foo');
+            });
+          });
+
+          it('should bind unnamed parameters to `route.params` property using numeric indexes', async() => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/(user[s]?)/:id', component: 'x-users-view'},
+            ]);
+            router.render('/users/1');
+            await router.ready.then((outlet) => {
+              const elem = outlet.children[0];
+              expect(elem.route).to.be.object;
+              expect(elem.route.params).to.be.object;
+              expect(elem.route.params[0]).to.equal('users');
+            });
+          });
+
+          it('should bind named custom parameters to `route.params` property using string keys', async() => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/image-:size(\\d+)px', component: 'x-image-view'},
+            ]);
+            router.render('/image-15px');
+            await router.ready.then((outlet) => {
+              const elem = outlet.children[0];
+              expect(elem.route).to.be.object;
+              expect(elem.route.params).to.be.object;
+              expect(elem.route.params.size).to.equal('15');
+            });
+          });
+
+          it('should bind named segments to the `route.params` property usingstring keys', async() => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/kb/:path+/:id', component: 'x-knowledge-base'},
+            ]);
+            router.render('/kb/folder/nested/1');
+            await router.ready.then((outlet) => {
+              const elem = outlet.children[0];
+              expect(elem.route).to.be.object;
+              expect(elem.route.params).to.be.object;
+              expect(elem.route.params.path).to.deep.equal(['folder', 'nested']);
+              expect(elem.route.params.id).to.equal('1');
+            });
           });
         });
       });
