--- a/demo/core-basic-demos.html
+++ b/demo/core-basic-demos.html
@@ -24,8 +24,8 @@
 
     <h3>Basic</h3>
     <p>Vaadin.Router needs an outlet (a DOM Node to render into), and a routes
-      config. Once created, it automatically subscribes to `popstate` events on
-      the <code>window</code> and updates the rendered compoenent every time
+      config. Once created, it automatically subscribes to <code>popstate</code> events on
+      the <code>window</code> and updates the rendered component every time
       either the location or the routes config changes.</p>
     <p>The routes config maps paths to Web Components. Vaadin.Router goes
       through the routes until it finds the first match, creates an instance
@@ -71,6 +71,77 @@
         </script>
       </template>
     </vaadin-demo-snippet>
+
+    <h3>Route Parameters</h3>
+    <p>Route parameters are defined using the <a href="https://github.com/pillarjs/path-to-regexp#parameters"
+      target="_blank">express-like syntax</a>. All features are supported:
+      <ul>
+        <li>named parameters: <code>/profile/:user</code></li>
+        <li>optional parameters: <code>/:size/:color?</code></li>
+        <li>zero-or-more segments: <code>/kb/:path*</code></li>
+        <li>one-or-more segments: <code>/kb/:path+</code></li>
+        <li>custom parameter patterns: <code>/image-:size(\d+)px</code></li>
+        <li>unnamed parameters: <code>/(user[s]?)/:id</code></li>
+      </ul>
+    </p>
+    <vaadin-demo-snippet id="core-basic-examples-3" iframe-src="iframe.html">
+      <template preserve-content>
+        <div id="outlet"></div>
+        <script type="module">
+          // import {Router} from '@vaadin/router';
+          const {Router} = window.Vaadin;
+
+          const router = new Router(document.getElementById('outlet'));
+          router.setRoutes([
+            {path: '/', component: 'x-home-view'},
+            {path: '/profile/:user', component: 'x-user-profile'},
+            {path: '/image/:size/:color?', component: 'x-image-view'},
+            {path: '/image-:size(\\d+)px', component: 'x-image-view'},
+            {path: '/kb/:path*', component: 'x-knowledge-base'},
+            {path: '/(user[s]?)/:id', component: 'x-profile-view'},
+          ]);
+        </script>
+      </template>
+    </vaadin-demo-snippet>
+
+    <h3>Accessing Route Parameters</h3>
+    <p>Named parameters are bound to the <code>route.params</code> property of the route component
+      (the <code>route</code> property is set on the route component by the router).</p>
+    <ul>
+      <li>Named parameters are accessible by string key.</li>
+      <li>Unnamed parameters are accessible by numeric index.</li>
+    </ul>
+    <vaadin-demo-snippet id="core-basic-examples-4" iframe-src="iframe.html">
+      <template preserve-content>
+        <div id="outlet"></div>
+        <script type="module">
+          class XProjectView extends Polymer.Element {
+            static get is() {
+              return 'x-project-view';
+            }
+            static get template() {
+              return Polymer.html`
+                <h1>Project</h1>
+                <p>ID: [[route.params.id]]</p>
+                <code>/project</code> or <code>/projects</code>: [[route.params.0]]
+              `;
+            }
+          }
+
+          customElements.define(XProjectView.is, XProjectView);
+
+          // import {Router} from '@vaadin/router';
+          const {Router} = window.Vaadin;
+
+          const router = new Router(document.getElementById('outlet'));
+          router.setRoutes([
+            {path: '/', component: 'x-home-view'},
+            {path: '/(project[s]?)/:id', component: 'x-project-view'},
+          ]);
+        </script>
+      </template>
+    </vaadin-demo-snippet>
+
   </template>
   <script>
     class CoreBasicDemos extends DemoReadyEventEmitter(ElementDemo(Polymer.Element)) {
