Code review fixes

--- a/demo/core-basic-demos.html
+++ b/demo/core-basic-demos.html
@@ -142,7 +142,7 @@
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Async route resolution</h3>
+    <h3>Async Route Resolution</h3>
     <p>Each route can have <code>action</code> method which is called before navigation to the path specified.</p>
     <p>This method can be used for complex navigation cases. If you need to simply open the page specified, use <code>component</code> instead.</p>
     <p>Note: For a single route, both <code>component</code> and <code>action</code> cannot be defined.</p>
