--- a/test/index.coverage.html
+++ b/test/index.coverage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>vaadin-router-core tests</title>
+  <title>Vaadin.Router Unit Tests</title>
   <!--
     We can use npm package in tests, but in the demos we still need HTML Imports support.
     This is the only reason to use Bower for the vaadin-router-core package.
@@ -28,7 +28,7 @@
   <span id="browser-sync-binding"></span>
   <script>
     (function() {
-      "use strict";
+      'use strict';
 
       WCT.loadSuites(
         window.VaadinRouterCoreSuites.coverage
