--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -6,10 +6,8 @@
 
 <link rel="import" href="element-demo.html">
 
-<link rel="import" href="../vaadin-router.html">
-<link rel="import" href="../vaadin-route.html">
-<link rel="import" href="../vaadin-router-link.html">
-<script src="../core/dist/umd/click-navigation-trigger.js"></script>
+<script src="../dist/umd/vaadin-router.js"></script>
+<script src="../dist/umd/click-navigation-trigger.js"></script>
 
 <link rel="import" href="demo-elements/x-home-view.html">
 <link rel="import" href="demo-elements/x-image-view.html">
