--- a/demo/iframe.html
+++ b/demo/iframe.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-  <title>vaadin-router demo</title>
+  <title>Vaadin.Router Demo</title>
   <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="import" href="demo-shell.html">
 
