--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 <html>
   <head>
-    <title>vaadin-router</title>
+    <title>Vaadin.Router</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body>
-    <iron-component-page src="vaadin-router.html"></iron-component-page>
+    <iron-component-page></iron-component-page>
   </body>
 </html>
