--- a/test/triggers/click.spec.html
+++ b/test/triggers/click.spec.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>vaadin-router-core tests</title>
+  <title>CLICK Navigation Trigger tests</title>
   <script src="../../bower_components/web-component-tester/browser.js"></script>
   <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../../dist/test-iife/triggers/triggerNavigation.js"></script>
