--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 
   <!--
     We can use npm package in tests, but in the demos we still need HTML Imports support.
-    This is the only reason to use Bower for the vaadin-router-core package.
+    This is the only reason to use Bower for the vaadin-router package.
   -->
   <script src="../bower_components/web-component-tester/browser.js"></script>
   <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
@@ -23,7 +23,7 @@
       'use strict';
 
       WCT.loadSuites(
-        window.VaadinRouterCoreSuites.default
+        window.VaadinRouterSuites.default
           .reduce(function(suites, suite) {
             return suites.concat(
               suite.match(/\.html$/)
