--- a/demo/vaadin-router-redirect-demos.html
+++ b/demo/vaadin-router-redirect-demos.html
@@ -11,6 +11,7 @@
       <template preserve-content>
         <a href="/">Home</a>
         <a href="/u/Kim">User profile</a>
+        <a href="/data/entity/view/12">Knowledge Base</a>
         <div id="outlet"></div>
         <script type="module">
           // import {Router} from '@vaadin/router';
@@ -27,6 +28,8 @@
             {path: '/', component: 'x-home-view'},
             {path: '/u/:user', redirect: '/user/:user'},
             {path: '/user/:user', component: 'x-user-profile'},
+            {path: '/data/:segments+/:path+', redirect: '/kb/:path+'},
+            {path: '/kb/:path+', component: 'x-knowledge-base'},
           ]);
         </script>
       </template>
