--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../polymer/lib/utils/import-href.html">
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-component-demo.html">
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-snippet.html">
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-ready-event-emitter.html">
@@ -17,3 +18,4 @@
 <link rel="import" href="demo-elements/x-not-found-view.html">
 <link rel="import" href="demo-elements/x-profile-view.html">
 <link rel="import" href="demo-elements/x-user-not-found-view.html">
+<link rel="import" href="demo-elements/x-bundle-test-view.html">
